--- a/kanji-master.html
+++ b/kanji-master.html
@@ -1011,6 +1011,8 @@
         <div id="main-menu">
             <header>
                 <h1>漢字 O'rganish</h1>
+                <br>
+                <h1 class="subtitle">Muallif: ボシット (アサドベクさんのがくせい)</h1>
                 <p class="subtitle">N5 Daraja Kanjilari - Interaktiv O'quv Dasturi</p>
             </header>
 
@@ -1068,7 +1070,7 @@
 
                 <div class="mode-card" onclick="startMode('progress')">
                     <div class="mode-icon">📊</div>
-                    <div class="mode-title">Taraqqiyot</div>
+                    <div class="mode-title">Statistika</div>
                     <div class="mode-description">O'rganish jarayonini kuzating va natijalarni ko'ring</div>
                 </div>
             </div>
@@ -1087,15 +1089,15 @@
                         <div class="info-value" id="study-meaning">Bir</div>
                     </div>
                     <div class="info-item">
-                        <div class="info-label">Kun o'qilishi</div>
+                        <div class="info-label">Kunyomi o'qilishi</div>
                         <div class="info-value" id="study-kun">ひと・つ</div>
                     </div>
                     <div class="info-item">
-                        <div class="info-label">On o'qilishi</div>
+                        <div class="info-label">Onyomi o'qilishi</div>
                         <div class="info-value" id="study-on">イチ、イツ</div>
                     </div>
                     <div class="info-item">
-                        <div class="info-label">Chiziqlar</div>
+                        <div class="info-label">Yozuvlar soni</div>
                         <div class="info-value" id="study-strokes">1</div>
                     </div>
                     <div class="info-item">
